k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
name: hello-jenkins-service
spec:
selector:
  app: hello-jenkins
ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
type: NodePort
